Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -560,6 +560,64 @@
     ]
   },
   {
+    "title": "Kiến nghị tăng mức phạt vi phạm an toàn thực phẩm",
+    "content": "Cử tri Bình Phước đã kiến nghị tăng mức phạt vi phạm an toàn thực phẩm nhằm bảo vệ sức khỏe cộng đồng và ngăn ngừa ngộ độc thực phẩm gia tăng. Trong năm 2024, cả nước ghi nhận 135 vụ ngộ độc thực phẩm, làm hơn 4.900 người mắc và 24 người tử vong, cho thấy tình hình an toàn thực phẩm đang rất nghiêm trọng. Bộ Y tế cho biết hiện tại đã có chế tài xử phạt nhưng sẽ xem xét tăng cường các biện pháp kiểm soát và sửa đổi quy định về an toàn thực phẩm trong thời gian tới.",
+    "link": "https://vnexpress.net/kien-nghi-tang-muc-phat-vi-pham-an-toan-thuc-pham-4865100.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Tại sao cử tri Bình Phước kiến nghị tăng mức phạt về an toàn thực phẩm?",
+    "answers": [
+      {
+        "text": "Để bảo vệ sức khỏe cộng đồng và ngăn ngừa ngộ độc thực phẩm.",
+        "correct": true
+      },
+      {
+        "text": "Vì mức phạt hiện tại quá cao.",
+        "correct": false
+      },
+      {
+        "text": "Để giảm chi phí cho các doanh nghiệp.",
+        "correct": false
+      },
+      {
+        "text": "Do sự phản đối từ các cơ sở kinh doanh.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Lịch thi tốt nghiệp THPT chính thức năm 2025, sớm hơn 1 ngày",
+    "content": "Bộ GD&ĐT đã chính thức công bố lịch thi tốt nghiệp THPT năm 2025, bắt đầu từ ngày 26/6, với ngày làm thủ tục dự thi là 25/6, sớm hơn một ngày so với năm trước. Kỳ thi sẽ diễn ra từ 26-28/6, với nhiều điểm mới so với các năm trước như giảm số buổi thi và tăng tỷ lệ sử dụng điểm học bạ. Bộ GD&ĐT đã chuẩn bị kỹ lưỡng cho kỳ thi này để đảm bảo chất lượng và hiệu quả.",
+    "link": "https://dantri.com.vn/giao-duc/lich-thi-tot-nghiep-thpt-chinh-thuc-nam-2025-som-hon-1-ngay-20250324114418394.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Lịch thi tốt nghiệp THPT năm 2025 bắt đầu từ ngày nào?",
+    "answers": [
+      {
+        "text": "26/6",
+        "correct": true
+      },
+      {
+        "text": "25/6",
+        "correct": false
+      },
+      {
+        "text": "28/6",
+        "correct": false
+      },
+      {
+        "text": "24/6",
+        "correct": false
+      },
+      {
+        "text": "27/6",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bắt người chở 30kg ma túy để lấy tiền công 2.000 USD",
     "content": "Vào ngày 24 tháng 3, lực lượng biên phòng tỉnh Long An đã bắt giữ Võ Văn Mai, 49 tuổi, khi đang vận chuyển 30kg ma túy, bao gồm Methamphetamine, Ketamine và Heroin, từ Đồng Tháp về TP.HCM. Mai khai nhận đã nhận chuyển ma túy với tiền công 2.000 USD và biết rằng 'đồ' mà mình nhận là ma túy. Hắn bị bắt khi đang di chuyển qua Long An với mật khẩu giao hàng là 'đi Vũng Tàu chơi'.",
     "link": "https://tuoitre.vn/bat-nguoi-cho-30kg-ma-tuy-de-lay-tien-cong-2-000-usd-2025032411084697.htm",
@@ -1151,33 +1209,6 @@
     ]
   },
   {
-    "title": "Skoda Kushaq - CUV cỡ B mới nhận cọc tại đại lý",
-    "content": "Skoda Kushaq, mẫu CUV cỡ B mới của Skoda, đã bắt đầu nhận cọc từ giữa tháng 3 với giá dự kiến khoảng 600 triệu đồng. Đây là mẫu xe thứ ba của Skoda tại Việt Nam, sau Kodiaq và Karoq, được lắp ráp bởi tập đoàn Thành Công. Xe có kích thước tương đồng với Mitsubishi Xforce và sẽ cạnh tranh với các đối thủ như Kia Seltos và Hyundai Creta. Dự kiến, Kushaq sẽ được chính thức giới thiệu vào tháng 6 năm 2025 và có thể giao xe vào quý II.",
-    "link": "https://vnexpress.net/skoda-kushaq-cuv-co-b-moi-nhan-coc-tai-dai-ly-4864777.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Skoda Kushaq bắt đầu nhận cọc từ thời điểm nào?",
-    "answers": [
-      {
-        "text": "Giữa tháng 3",
-        "correct": true
-      },
-      {
-        "text": "Đầu tháng 4",
-        "correct": false
-      },
-      {
-        "text": "Cuối tháng 2",
-        "correct": false
-      },
-      {
-        "text": "Giữa tháng 1",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "4 hiểu lầm thường gặp về đường",
     "content": "Bài viết đề cập đến 4 hiểu lầm phổ biến về đường, bao gồm những tác hại của đường không chỉ trong bánh kẹo, nước ngọt mà còn trong nhiều sản phẩm chế biến khác. Đường tinh luyện có thể gây tăng cân, béo phì, rối loạn chuyển hóa và tăng nguy cơ bệnh tim mạch. Tuy nhiên, không phải tất cả loại đường đều xấu; đường tự nhiên trong trái cây và rau củ mang lại nhiều lợi ích cho sức khỏe. Người tiêu dùng nên thận trọng với lượng đường bổ sung và kết hợp ăn uống hợp lý.",
     "link": "https://vnexpress.net/4-hieu-lam-thuong-gap-ve-duong-4865016.html",
@@ -1200,6 +1231,33 @@
       },
       {
         "text": "Chỉ ăn đường một lần trong ngày là an toàn",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Skoda Kushaq - CUV cỡ B mới nhận cọc tại đại lý",
+    "content": "Skoda Kushaq, mẫu CUV cỡ B mới của Skoda, đã bắt đầu nhận cọc từ giữa tháng 3 với giá dự kiến khoảng 600 triệu đồng. Đây là mẫu xe thứ ba của Skoda tại Việt Nam, sau Kodiaq và Karoq, được lắp ráp bởi tập đoàn Thành Công. Xe có kích thước tương đồng với Mitsubishi Xforce và sẽ cạnh tranh với các đối thủ như Kia Seltos và Hyundai Creta. Dự kiến, Kushaq sẽ được chính thức giới thiệu vào tháng 6 năm 2025 và có thể giao xe vào quý II.",
+    "link": "https://vnexpress.net/skoda-kushaq-cuv-co-b-moi-nhan-coc-tai-dai-ly-4864777.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Skoda Kushaq bắt đầu nhận cọc từ thời điểm nào?",
+    "answers": [
+      {
+        "text": "Giữa tháng 3",
+        "correct": true
+      },
+      {
+        "text": "Đầu tháng 4",
+        "correct": false
+      },
+      {
+        "text": "Cuối tháng 2",
+        "correct": false
+      },
+      {
+        "text": "Giữa tháng 1",
         "correct": false
       }
     ]
@@ -2032,33 +2090,6 @@
     ]
   },
   {
-    "title": "Những gia đình Việt tìm cách giữ tiếng mẹ đẻ cho con",
-    "content": "Bài viết tập trung vào nỗi lo của những gia đình Việt sống ở nước ngoài, đặc biệt là tại Nhật Bản, về việc giữ gìn tiếng mẹ đẻ cho con cái. Chị Tô Thị Thu chia sẻ về việc dạy tiếng Việt cho con trai mình, trong khi con đã nhanh chóng hòa nhập và giỏi tiếng Nhật. Nhiều gia đình khác cũng đối mặt với tình hình tương tự, dẫn đến việc thành lập các trường dạy tiếng Việt cho trẻ em gốc Việt ở nước ngoài. Các chuyên gia khuyến khích cha mẹ nên chủ động trong việc duy trì ngôn ngữ và văn hóa Việt Nam cho con cái để giúp trẻ hiểu và tự hào về nguồn gốc dân tộc của mình.",
-    "link": "https://vnexpress.net/nhung-gia-dinh-viet-tim-cach-giu-tieng-me-de-cho-con-4862705.html",
-    "cat": "gia-dinh",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Làm thế nào để các gia đình Việt ở nước ngoài giữ gìn tiếng mẹ đẻ cho con cái?",
-    "answers": [
-      {
-        "text": "Bằng cách giao tiếp bằng tiếng Việt và cho trẻ học tiếng Việt thường xuyên.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ cần để trẻ học tiếng Nhật là đủ.",
-        "correct": false
-      },
-      {
-        "text": "Không cần dạy tiếng Việt nếu trẻ sống ở nước ngoài.",
-        "correct": false
-      },
-      {
-        "text": "Để trẻ tự học tiếng Việt mà không cần sự hỗ trợ của cha mẹ.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Mẹ 3 con 'lão hóa ngược' sau trút bỏ 27 kg mỡ",
     "content": "Bùi Thị Minh Nguyệt, 28 tuổi, đã giảm 27 kg và 40 cm vòng eo trong gần 1,5 năm nhờ áp dụng chế độ ăn \"eat clean\" và tích cực vận động. Sau khi sinh hai con, Nguyệt đã phải đối mặt với tình trạng béo phì và nhiều vấn đề sức khỏe, nhưng nhờ quyết tâm thay đổi, cô đã đạt được vóc dáng thon gọn và khỏe mạnh hơn. Hiện tại, Nguyệt không chỉ duy trì thói quen ăn uống lành mạnh mà còn trở thành huấn luyện viên dinh dưỡng, giúp đỡ những người khác trong hành trình giảm cân và cải thiện sức khỏe.",
     "link": "https://vnexpress.net/me-3-con-lao-hoa-nguoc-sau-trut-bo-27-kg-mo-4864134.html",
@@ -2085,6 +2116,33 @@
       },
       {
         "text": "10 kg",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Những gia đình Việt tìm cách giữ tiếng mẹ đẻ cho con",
+    "content": "Bài viết tập trung vào nỗi lo của những gia đình Việt sống ở nước ngoài, đặc biệt là tại Nhật Bản, về việc giữ gìn tiếng mẹ đẻ cho con cái. Chị Tô Thị Thu chia sẻ về việc dạy tiếng Việt cho con trai mình, trong khi con đã nhanh chóng hòa nhập và giỏi tiếng Nhật. Nhiều gia đình khác cũng đối mặt với tình hình tương tự, dẫn đến việc thành lập các trường dạy tiếng Việt cho trẻ em gốc Việt ở nước ngoài. Các chuyên gia khuyến khích cha mẹ nên chủ động trong việc duy trì ngôn ngữ và văn hóa Việt Nam cho con cái để giúp trẻ hiểu và tự hào về nguồn gốc dân tộc của mình.",
+    "link": "https://vnexpress.net/nhung-gia-dinh-viet-tim-cach-giu-tieng-me-de-cho-con-4862705.html",
+    "cat": "gia-dinh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Làm thế nào để các gia đình Việt ở nước ngoài giữ gìn tiếng mẹ đẻ cho con cái?",
+    "answers": [
+      {
+        "text": "Bằng cách giao tiếp bằng tiếng Việt và cho trẻ học tiếng Việt thường xuyên.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ cần để trẻ học tiếng Nhật là đủ.",
+        "correct": false
+      },
+      {
+        "text": "Không cần dạy tiếng Việt nếu trẻ sống ở nước ngoài.",
+        "correct": false
+      },
+      {
+        "text": "Để trẻ tự học tiếng Việt mà không cần sự hỗ trợ của cha mẹ.",
         "correct": false
       }
     ]
@@ -3334,6 +3392,33 @@
     ]
   },
   {
+    "title": "Thông báo làm sinh viên thốt lên \"trường sống vội quá, em theo không kịp\"",
+    "content": "Trường Đại học Công thương TPHCM đã công bố lịch nghỉ Tết Nguyên đán 2026 vào tháng 3, khiến nhiều sinh viên cảm thấy nôn nao và thốt lên rằng \"trường sống vội quá, em theo không kịp\". Thông báo này đã nhận được nhiều phản hồi tích cực từ sinh viên với hàng loạt bình luận hài hước trên mạng xã hội. Lịch nghỉ Tết kéo dài 4 tuần từ 9/2/2026 đến 8/3/2026 nhằm giúp sinh viên và cán bộ có thời gian nghỉ ngơi, đồng thời tránh tình trạng quá tải trong những ngày cao điểm gần Tết.",
+    "link": "https://dantri.com.vn/giao-duc/thong-bao-lam-sinh-vien-thot-len-truong-song-voi-qua-em-theo-khong-kip-20250323072426482.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 6,
+    "question": "Tại sao sinh viên Trường Đại học Công thương TPHCM lại cảm thấy nôn nao khi đọc thông báo nghỉ Tết?",
+    "answers": [
+      {
+        "text": "Vì trường công bố lịch nghỉ Tết sớm hơn dự kiến.",
+        "correct": true
+      },
+      {
+        "text": "Vì sinh viên không thích nghỉ Tết.",
+        "correct": false
+      },
+      {
+        "text": "Vì sinh viên đang bận học kỳ cuối.",
+        "correct": false
+      },
+      {
+        "text": "Vì trường không cho họ biết lịch nghỉ lễ.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hầu hết mọi người sẽ nhiễm HPV trong cuộc đời",
     "content": "Hầu hết mọi người sẽ nhiễm virus HPV trong cuộc đời, nhưng chỉ một số ít ca có thể dẫn đến ung thư. Virus HPV gồm hơn 200 chủng, trong đó có những chủng nguy cơ thấp không gây ung thư và thường tự khỏi. Tuy nhiên, các chủng nguy cơ cao có thể gây ra 5% tổng số ca ung thư toàn cầu, đặc biệt là ung thư cổ tử cung. Vaccine HPV có thể ngăn ngừa hơn 90% các bệnh ung thư do virus này gây ra, nhưng tỷ lệ tiêm vaccine ở Việt Nam còn thấp.",
     "link": "https://vnexpress.net/hau-het-moi-nguoi-se-nhiem-hpv-trong-cuoc-doi-4864744.html",
@@ -3360,33 +3445,6 @@
       },
       {
         "text": "Ung thư đại tràng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Thông báo làm sinh viên thốt lên \"trường sống vội quá, em theo không kịp\"",
-    "content": "Trường Đại học Công thương TPHCM đã công bố lịch nghỉ Tết Nguyên đán 2026 vào tháng 3, khiến nhiều sinh viên cảm thấy nôn nao và thốt lên rằng \"trường sống vội quá, em theo không kịp\". Thông báo này đã nhận được nhiều phản hồi tích cực từ sinh viên với hàng loạt bình luận hài hước trên mạng xã hội. Lịch nghỉ Tết kéo dài 4 tuần từ 9/2/2026 đến 8/3/2026 nhằm giúp sinh viên và cán bộ có thời gian nghỉ ngơi, đồng thời tránh tình trạng quá tải trong những ngày cao điểm gần Tết.",
-    "link": "https://dantri.com.vn/giao-duc/thong-bao-lam-sinh-vien-thot-len-truong-song-voi-qua-em-theo-khong-kip-20250323072426482.htm",
-    "cat": "giao-duc",
-    "positivity": 8,
-    "importance": 6,
-    "question": "Tại sao sinh viên Trường Đại học Công thương TPHCM lại cảm thấy nôn nao khi đọc thông báo nghỉ Tết?",
-    "answers": [
-      {
-        "text": "Vì trường công bố lịch nghỉ Tết sớm hơn dự kiến.",
-        "correct": true
-      },
-      {
-        "text": "Vì sinh viên không thích nghỉ Tết.",
-        "correct": false
-      },
-      {
-        "text": "Vì sinh viên đang bận học kỳ cuối.",
-        "correct": false
-      },
-      {
-        "text": "Vì trường không cho họ biết lịch nghỉ lễ.",
         "correct": false
       }
     ]
@@ -3766,118 +3824,6 @@
       },
       {
         "text": "2 tàu",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Oanh Kiều xúc động khi đoạt giải thưởng lớn đầu tiên trong sự nghiệp",
-    "content": "Trong lễ bế mạc Liên hoan Truyền hình toàn quốc lần thứ 42, diễn viên Oanh Kiều đã nhận giải thưởng Nữ diễn viên chính xuất sắc với vai diễn trong phim \"Lụa\". Cô chia sẻ rằng đây là động lực lớn để tiếp tục phấn đấu trong sự nghiệp nghệ thuật. Oanh Kiều bày tỏ lòng biết ơn đối với gia đình và khán giả đã ủng hộ cô trong suốt quãng đường này. Đây là giải thưởng lớn đầu tiên trong sự nghiệp của cô.",
-    "link": "https://dantri.com.vn/giai-tri/oanh-kieu-xuc-dong-khi-doat-giai-thuong-lon-dau-tien-trong-su-nghiep-20250323111431455.htm",
-    "cat": "giai-tri",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Oanh Kiều đã đoạt giải thưởng gì trong sự nghiệp của mình?",
-    "answers": [
-      {
-        "text": "Nữ diễn viên chính xuất sắc",
-        "correct": true
-      },
-      {
-        "text": "Nam diễn viên phụ xuất sắc",
-        "correct": false
-      },
-      {
-        "text": "Giải thưởng âm nhạc",
-        "correct": false
-      },
-      {
-        "text": "Giải thưởng phim tài liệu",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bác bảo vệ gây sốt vì khéo dỗ bé gái chờ mẹ đến đón muộn",
-    "content": "Bác bảo vệ Liu Jie, làm việc tại một trường mẫu giáo ở Sơn Đông, Trung Quốc, đã thu hút sự chú ý trên mạng xã hội khi ân cần dỗ dành bé gái Tiểu Đào đang chờ mẹ đến đón muộn. Khi thấy Tiểu Đào buồn bã, bác Liu đã bế bé và thực hiện một điệu nhảy vui vẻ để làm cô bé vui trở lại. Hành động này không chỉ giúp Tiểu Đào cảm thấy hạnh phúc mà còn thể hiện sự quan tâm và tình yêu thương của bác bảo vệ đối với trẻ nhỏ.",
-    "link": "https://dantri.com.vn/giao-duc/bac-bao-ve-gay-sot-vi-kheo-do-be-gai-cho-me-den-don-muon-20250319110703515.htm",
-    "cat": "gia-dinh",
-    "positivity": 10,
-    "importance": 7,
-    "question": "Bác bảo vệ Liu Jie đã làm gì để dỗ dành bé gái Tiểu Đào khi mẹ đến đón muộn?",
-    "answers": [
-      {
-        "text": "Bế bé và nhảy múa",
-        "correct": true
-      },
-      {
-        "text": "Cho bé ăn kẹo",
-        "correct": false
-      },
-      {
-        "text": "Đưa bé đi chơi",
-        "correct": false
-      },
-      {
-        "text": "Kể chuyện cho bé nghe",
-        "correct": false
-      },
-      {
-        "text": "Chơi trò chơi điện tử với bé",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "5 gia vị, thảo mộc giúp tăng đề kháng hô hấp",
-    "content": "Bài viết giới thiệu 5 loại gia vị và thảo mộc có tác dụng tăng cường đề kháng hô hấp, bao gồm húng quế, gừng, nghệ, ớt cay và tỏi. Những loại gia vị này có đặc tính kháng khuẩn, chống viêm và giúp cải thiện hệ thống miễn dịch, từ đó giảm nguy cơ mắc các bệnh nhiễm trùng hô hấp. Cụ thể, húng quế và gừng có khả năng chống virus, trong khi tỏi và nghệ cũng cung cấp nhiều lợi ích cho sức khỏe hô hấp.",
-    "link": "https://vnexpress.net/5-gia-vi-thao-moc-giup-tang-de-khang-ho-hap-4864656.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những gia vị nào giúp tăng đề kháng hô hấp?",
-    "answers": [
-      {
-        "text": "Húng quế, gừng, nghệ, ớt cay và tỏi",
-        "correct": true
-      },
-      {
-        "text": "Chanh, dưa hấu, xoài",
-        "correct": false
-      },
-      {
-        "text": "Cà chua, khoai tây, hành tây",
-        "correct": false
-      },
-      {
-        "text": "Bông cải xanh, bắp cải, đậu xanh",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "5 quả giàu chất xơ giúp giảm cholesterol",
-    "content": "Bài viết giới thiệu về 5 loại quả giàu chất xơ có tác dụng giảm cholesterol, bao gồm bơ, táo, lê, lựu và cam. Những loại quả này không chỉ cung cấp chất xơ mà còn chứa các chất chống oxy hóa, giúp cải thiện sức khỏe tim mạch và giảm tình trạng viêm nhiễm. Các loại quả này cũng giúp cảm giác no lâu hơn và hỗ trợ tiêu hóa, điều chỉnh lượng cholesterol xấu (LDL).",
-    "link": "https://vnexpress.net/5-qua-giau-chat-xo-giup-giam-cholesterol-4864653.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những loại quả nào giúp giảm cholesterol?",
-    "answers": [
-      {
-        "text": "Bơ, táo, lê, lựu, cam",
-        "correct": true
-      },
-      {
-        "text": "Chuối, dưa hấu, nho",
-        "correct": false
-      },
-      {
-        "text": "Xoài, dứa, kiwi",
-        "correct": false
-      },
-      {
-        "text": "Nho khô, hạt chia, bưởi",
         "correct": false
       }
     ]
