Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,37 @@
     */
     const newsData = [
   {
+    "title": "Đầu đạn 40 năm kẹt trong cột sống người đàn ông",
+    "content": "Ông Điệp, 60 tuổi, đã sống với một mảnh đạn kẹt trong cột sống thắt lưng suốt hơn 40 năm. Gần đây, ông cảm thấy đau lưng và chân nặng nề, khiến việc đi lại trở nên khó khăn. Sau khi chụp MRI và CT, các bác sĩ xác định mảnh đạn gây viêm và chèn ép dây thần kinh, dẫn đến teo cơ và khó khăn trong sinh hoạt. Ông đã được phẫu thuật thành công để lấy mảnh đạn ra, và hiện đang trong quá trình hồi phục với tiên lượng tốt.",
+    "link": "https://vnexpress.net/dau-dan-40-nam-ket-trong-cot-song-nguoi-dan-ong-4864946.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Ông Điệp đã sống với mảnh đạn kẹt trong cột sống bao lâu?",
+    "answers": [
+      {
+        "text": "Hơn 40 năm",
+        "correct": true
+      },
+      {
+        "text": "20 năm",
+        "correct": false
+      },
+      {
+        "text": "10 năm",
+        "correct": false
+      },
+      {
+        "text": "5 năm",
+        "correct": false
+      },
+      {
+        "text": "30 năm",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Quảng Ngãi khánh thành trung tâm hội nghị tổng diện tích gần 15.000 m2",
     "content": "Vào sáng ngày 24/3, tỉnh Quảng Ngãi đã khánh thành Trung tâm Hội nghị và Triển lãm có tổng diện tích gần 15.000 m2, hoàn thành sớm 6 tháng so với kế hoạch. Công trình này có tổng vốn đầu tư 300 tỷ đồng và bao gồm một khối nhà hội nghị cao 3 tầng, với hội trường 1.000 chỗ ngồi cùng khu vực triển lãm ngoài trời rộng lớn. Trung tâm không chỉ phục vụ các hội nghị trong tỉnh mà còn cho các sự kiện quốc gia và quốc tế, góp phần phát triển kinh tế - xã hội của tỉnh.",
     "link": "https://vnexpress.net/quang-ngai-khanh-thanh-trung-tam-hoi-nghi-tong-dien-tich-gan-15-000-m2-4865065.html",
@@ -2090,32 +2121,28 @@
     ]
   },
   {
-    "title": "Mẹ 3 con 'lão hóa ngược' sau trút bỏ 27 kg mỡ",
-    "content": "Bùi Thị Minh Nguyệt, 28 tuổi, đã giảm 27 kg và 40 cm vòng eo trong gần 1,5 năm nhờ áp dụng chế độ ăn \"eat clean\" và tích cực vận động. Sau khi sinh hai con, Nguyệt đã phải đối mặt với tình trạng béo phì và nhiều vấn đề sức khỏe, nhưng nhờ quyết tâm thay đổi, cô đã đạt được vóc dáng thon gọn và khỏe mạnh hơn. Hiện tại, Nguyệt không chỉ duy trì thói quen ăn uống lành mạnh mà còn trở thành huấn luyện viên dinh dưỡng, giúp đỡ những người khác trong hành trình giảm cân và cải thiện sức khỏe.",
-    "link": "https://vnexpress.net/me-3-con-lao-hoa-nguoc-sau-trut-bo-27-kg-mo-4864134.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
+    "title": "Một ngày luyện diễu binh của khối nữ chiến sĩ Biệt động Sài Gòn",
+    "content": "Các nữ chiến sĩ Biệt động Sài Gòn đang tích cực luyện tập diễu binh dưới cái nắng gắt 36 độ C để chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Họ đã luyện tập trong hơn 3 tháng, mỗi buổi kéo dài khoảng hai giờ, với sự hướng dẫn nghiêm túc để đảm bảo kỹ thuật và đồng đều trong các động tác. Mặc dù gặp khó khăn như đau chân hay say nắng, các chiến sĩ vẫn thể hiện quyết tâm cao trong việc hoàn thành mục tiêu luyện tập của mình.",
+    "link": "https://vnexpress.net/mot-ngay-luyen-dieu-binh-cua-khoi-nu-chien-si-biet-dong-sai-gon-4864229.html",
+    "cat": "thoi-su",
+    "positivity": 8,
     "importance": 7,
-    "question": "Nguyễn Nguyệt đã giảm bao nhiêu kg trong quá trình thay đổi chế độ ăn uống?",
+    "question": "Các nữ chiến sĩ Biệt động Sài Gòn đang luyện tập cho sự kiện gì?",
     "answers": [
       {
-        "text": "27 kg",
+        "text": "Lễ diễu binh kỷ niệm 50 năm thống nhất đất nước",
         "correct": true
       },
       {
-        "text": "15 kg",
+        "text": "Lễ hội mùa xuân",
         "correct": false
       },
       {
-        "text": "35 kg",
+        "text": "Cuộc thi thể thao quốc gia",
         "correct": false
       },
       {
-        "text": "20 kg",
-        "correct": false
-      },
-      {
-        "text": "10 kg",
+        "text": "Ngày Quốc tế Phụ nữ",
         "correct": false
       }
     ]
@@ -2148,33 +2175,6 @@
     ]
   },
   {
-    "title": "Một ngày luyện diễu binh của khối nữ chiến sĩ Biệt động Sài Gòn",
-    "content": "Các nữ chiến sĩ Biệt động Sài Gòn đang tích cực luyện tập diễu binh dưới cái nắng gắt 36 độ C để chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Họ đã luyện tập trong hơn 3 tháng, mỗi buổi kéo dài khoảng hai giờ, với sự hướng dẫn nghiêm túc để đảm bảo kỹ thuật và đồng đều trong các động tác. Mặc dù gặp khó khăn như đau chân hay say nắng, các chiến sĩ vẫn thể hiện quyết tâm cao trong việc hoàn thành mục tiêu luyện tập của mình.",
-    "link": "https://vnexpress.net/mot-ngay-luyen-dieu-binh-cua-khoi-nu-chien-si-biet-dong-sai-gon-4864229.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Các nữ chiến sĩ Biệt động Sài Gòn đang luyện tập cho sự kiện gì?",
-    "answers": [
-      {
-        "text": "Lễ diễu binh kỷ niệm 50 năm thống nhất đất nước",
-        "correct": true
-      },
-      {
-        "text": "Lễ hội mùa xuân",
-        "correct": false
-      },
-      {
-        "text": "Cuộc thi thể thao quốc gia",
-        "correct": false
-      },
-      {
-        "text": "Ngày Quốc tế Phụ nữ",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Nghệ sĩ Vũ Thanh thời trẻ lầm lỡ, về già đau đớn nhìn vợ nguy kịch",
     "content": "Nghệ sĩ Vũ Thanh hiện đang trải qua thời kỳ khó khăn khi vợ ông, ca sĩ Lệ Hải, đang trong tình trạng nguy kịch do nhiều bệnh lý nghiêm trọng. Sau hơn 40 năm gắn bó, ông phải chứng kiến cảnh vợ mình chống chọi với bệnh tật và suy yếu dần. Chi phí điều trị hiện đã vượt quá khả năng tài chính của gia đình, và ông phải vật lộn để kiếm sống trong lúc chăm sóc vợ. Dù vậy, ông vẫn giữ tinh thần lạc quan và không ngừng hy vọng vào sự hồi phục của vợ.",
     "link": "https://dantri.com.vn/giai-tri/nghe-si-vu-thanh-thoi-tre-lam-lo-ve-gia-dau-don-nhin-vo-nguy-kich-20250321173615479.htm",
@@ -2197,6 +2197,37 @@
       },
       {
         "text": "Vợ ông chỉ bị cảm lạnh thông thường.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Mẹ 3 con 'lão hóa ngược' sau trút bỏ 27 kg mỡ",
+    "content": "Bùi Thị Minh Nguyệt, 28 tuổi, đã giảm 27 kg và 40 cm vòng eo trong gần 1,5 năm nhờ áp dụng chế độ ăn \"eat clean\" và tích cực vận động. Sau khi sinh hai con, Nguyệt đã phải đối mặt với tình trạng béo phì và nhiều vấn đề sức khỏe, nhưng nhờ quyết tâm thay đổi, cô đã đạt được vóc dáng thon gọn và khỏe mạnh hơn. Hiện tại, Nguyệt không chỉ duy trì thói quen ăn uống lành mạnh mà còn trở thành huấn luyện viên dinh dưỡng, giúp đỡ những người khác trong hành trình giảm cân và cải thiện sức khỏe.",
+    "link": "https://vnexpress.net/me-3-con-lao-hoa-nguoc-sau-trut-bo-27-kg-mo-4864134.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Nguyễn Nguyệt đã giảm bao nhiêu kg trong quá trình thay đổi chế độ ăn uống?",
+    "answers": [
+      {
+        "text": "27 kg",
+        "correct": true
+      },
+      {
+        "text": "15 kg",
+        "correct": false
+      },
+      {
+        "text": "35 kg",
+        "correct": false
+      },
+      {
+        "text": "20 kg",
+        "correct": false
+      },
+      {
+        "text": "10 kg",
         "correct": false
       }
     ]
